# archive-test-bed

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  Dockerfile  README.md  ghga_datasteward_kit  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: dcs.yaml  dev_install  devcontainer.json  docker-compose.yml  ifrs.yaml  mass.yaml  metldata  metldata.yaml  tb.yaml
example_data/: __init__.py  datasets.py
features/: 01_health_check.feature  10_submit_metadata.feature  11_transform_metadata.feature  12_upload_files.feature  13_ingest_file_metadata.feature  13_load_metadata.feature  14_upload_metadata.feature  20_browse_metadata.feature  20_examine_artifacts.feature  20_global_summary.feature  20_review_metadata.feature  21_artifact_info.feature  21_browse_metadata.feature  21_filter_datasets.feature  22_search_datasets.feature  23_filter_datasets.feature  24_paginate_datasets.feature  25_combined_browsing.feature  26_dataset_summary.feature  27_dataset_details.feature  30_access_request.feature  30_user_registration.feature  31_access_request.feature  31_work_packages.feature  32_download_files.feature  32_work_packages.feature  33_download_files.feature  40_delete_datasets.feature  50_data_portal.feature  access_request.feature  work_packages.feature
fixtures/: __init__.py  auth.py  c4gh.py  config.py  connector.py  dsk.py  file.py  http.py  http_client.py  kafka.py  metadata.py  mongo.py  s3.py  state.py  submission.py  utils.py  vault.py
gh-page-template/: index.html
scripts/: create_metldata_yaml.sh  (+2 more)
(+85 files in other folders)
